<resources>
    <string name="app_name">FWC-Vyapaar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="action_Cart">Cart</string>
    <string name="action_Notification">Notification</string>
    <string name="about">VaviMart - Rainbow for Marketing\n\nApplication helps in establishing direct connection between buyers and sellers avoiding intermediate persons involving in trading.\n\nDevelopers:\n\n<b>Dr. S.P. Shiva Prakash</b>\nAssociate Professor\n\n<b>Ms. Monisha B.S</b> (M.Tech in Software Engineering)\n<b>Mr. Swaroop S</b> (M.Tech in Software Engineering)\n<b>Mr. G Sai Charan</b> (B.E in Information Science and Engineering)\n\nDepartment of Information Science and Engineering\nJSS Science and Technology University, Mysuru</string>
    <string name="address_city">City*</string>
    <string name="address_locality">Locality, Area or Street*</string>
    <string name="address_flat">Flat No., Building Name*</string>
    <string name="address_pincode">Pincode*</string>
    <string name="address_state">State*</string>
    <string name="address_lankmark">Landmark(Optional)</string>
    <string name="address_upiname">Name in UPI account (Google pay/ Phone pay)</string>
    <string name="address_upiid">UPI ID (name@okaxis)</string>
    <string name="address_mobile">Alternate Mobile No.(Optional)</string>
    <string name="address_submit">SAVE</string>
    <string name="cart_heading"> PRICE DETAILS </string>
    <string name="cart_address">Address</string>
    <string name="cart_priceitem">Price (0 items)</string>
    <string name="cart_rupee">Rs. 0/-</string>
    <string name="cart_total">Total Amount</string>
    <string name="cart_totalrupee">Rs. 0/-</string>
    <string name="cart_buy">Buy Now</string>
    <string name="login_forgot">Forgot Password ?</string>
    <string name="login_signup">New Here ?  Create Account</string>
    <string name="login_login">Login</string>
    <string name="login_password">Password</string>
    <string name="login_email">Enter Phone Number</string>
    <string name="login_heading">Login</string>
    <string name="main_urname">Your Name</string>
    <string name="main_uremail">Your Email Address</string>
    <string name="main_urphone">Phone Number</string>
    <string name="main_updateaddress">Update Address and Payment Details</string>
    <string name="main_resetpassword">Reset Password</string>
    <string name="main_changeacctype">Change Account Type</string>
    <string name="main_fullname">Full Name</string>
    <string name="main_email">Email</string>
    <string name="main_phone">Phone</string>
    <string name="main_address">Address</string>
    <string name="main_address2">Address</string>
    <string name="main_type">Account Type</string>
    <string name="main_type2">Type</string>
    <string name="main_heading">Email Not Verfied !</string>
    <string name="main_verify">Verify Now</string>
    <string name="order_details_heading"> PRICE DETAILS </string>
    <string name="order_details_price">Price (0 items)</string>
    <string name="order_details_rupee">Rs. 0/-</string>
    <string name="order_details_totalamount">Total Amount</string>
    <string name="order_details_totalrupee">Rs. 0/-</string>
    <string name="order_details_button">Open Map(Address)</string>
    <string name="payment_heading">Payment</string>
    <string name="payment_upi">Pay through UPI </string>
    <string name="payment_googlepay">Pay via Google Pay  </string>
    <string name="payment_phonepay">Pay via Phone Pay </string>
    <string name="payment_cash">Pay via Cash </string>
    <string name="producer_heading1">User</string>
    <string name="producer_heading2">Producer</string>
    <string name="producer_profile">Profile</string>
    <string name="producer_checkprofile">Check your Profile</string>
    <string name="producer_liveloca">Live Location</string>
    <string name="producer_enablelive">Enable Live Traking</string>
    <string name="producer_products">Products</string>
    <string name="producer_addproducts">Add and View Products</string>
    <string name="producer_vieworders">View Orders</string>
    <string name="producer_acceptorder">Accept the Orders</string>
    <string name="producer_addproduct">Add Products</string>
    <string name="producer_postadd">Post an Add in app</string>
    <string name="producer_logout">Logout</string>
    <string name="producer_logout2">Logout of the App</string>
    <string name="producer_prods_view">View Products</string>
    <string name="producer_prods_productlist">Your Products List</string>
    <string name="producer_prods_add">Add Products</string>
    <string name="producer_prods_postad">Post an Add in app</string>
    <string name="product_select">Select Category</string>
    <string name="product_name">Product Name*</string>
    <string name="product_price">Product Price*</string>
    <string name="product_quantity">Available Quantity*</string>
    <string name="product_company">Product Company</string>
    <string name="product_milktype">Milk Type</string>
    <string name="product_dis">Discription*</string>
    <string name="product_property">Property*</string>
    <string name="product_dis2">Discription*</string>
    <string name="product_publish">Publish</string>
    <string name="product_addmore">Add more fields</string>
    <string name="product_display_title">Product Title</string>
    <string name="product_display_rating">4.5</string>
    <string name="product_display_totalrating">total ratings</string>
    <string name="product_display_price">Rs.659/-</string>
    <string name="product_display_mobility">Mobility</string>
    <string name="product_display_dis">Discription</string>
    <string name="product_display_address">Address</string>
    <string name="product_display_map">Map</string>
    <string name="product_display_buynow">Buy Now</string>
    <string name="product_display_addtocart">Add to cart</string>
    <string name="product_display_quantity">Quantity</string>
    <string name="product_display_quantity2">Quantity</string>
    <string name="product_edit_upload">Upload</string>
    <string name="product_edit_producttitle">Product Title</string>
    <string name="product_edit_avl">Available Quantity : </string>
    <string name="product_edit_avlquantity">00</string>
    <string name="product_edit_price">Rs. 0/-</string>
    <string name="product_edit_desc">Discription</string>
    <string name="product_edit_button">Delete Add</string>
    <string name="register_login">Already Registered ? Login Here</string>
    <string name="register_register">Register</string>
    <string name="register_phone">Phone</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_fullname">Full Name*</string>
    <string name="register_title">Register</string>
    <string name="shop_milk">Milk</string>
    <string name="shop_tender">Tender Coconut</string>
    <string name="shop_range">Range 100Kms</string>
    <string name="shop_locality">Locality</string>
    <string name="shop_product">Products</string>
    <string name="bar_main2_title">COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces.</string>
    <string name="bar_main2_milk">Milk</string>
    <string name="bar_main2_coconut">Coconut</string>
    <string name="bar_main2_chicken">Chicken</string>
    <string name="bar_main2_mutton">Mutton</string>
    <string name="bar_main2_range">Range\n100Kms</string>
    <string name="bar_main2_locality">Locality</string>
    <string name="bar_main2_product">Products</string>
    <string name="bar_main2_dal">Dal Pulses</string>
    <string name="bar_main2_vegitable">Vegetables</string>
    <string name="bar_main2_fruits">Fruits</string>
    <string name="bar_main2_crops">Crops</string>
    <string name="bar_main2_meat">Meat</string>
    <string name="bar_main2_oil">Edible Oil</string>
    <string name="bar_main2_Herb">Herbs</string>
    <string name="cart_view_product">Product</string>
    <string name="cart_view_price">Price</string>
    <string name="cart_view_qnty">Quantity: 1</string>
    <string name="cart_view_del">Delete</string>
    <string name="customer_status_product">Product</string>
    <string name="customer_status_qnty">Quantity</string>
    <string name="customer_status_price">Price</string>
    <string name="customer_status_time">Time Date</string>
    <string name="customer_status_orderid">Order ID</string>
    <string name="customer_status_payment">Payment</string>
    <string name="customer_status_cancel">Cancel Order</string>
    <string name="customer_status_pay">Pay</string>
    <string name="customer_status_pending">Pending Confirmation</string>
    <string name="feedback_qty">Quantity: 1</string>
    <string name="feedback_name">Pixel 2 XL</string>
    <string name="feedback_price">Rs. 49999/-</string>
    <string name="feedback_accept">Accept</string>
    <string name="feedback_decline">Decline</string>
    <string name="items_product">Product</string>
    <string name="items_price">Price</string>
    <string name="nav_header_main2_name">Name</string>
    <string name="nav_header_main2_type">Type</string>
    <string name="order_acceptview_product">Product</string>
    <string name="order_acceptview_name">Name</string>
    <string name="order_acceptview_phone">Phone Number</string>
    <string name="order_acceptview_qnty">Quantity</string>
    <string name="order_acceptview_price">Price</string>
    <string name="order_acceptview_time">Time Date</string>
    <string name="order_acceptview_id">Orderid</string>
    <string name="order_acceptview_payment">Payment</string>
    <string name="order_acceptview_accept">Accept</string>
    <string name="order_acceptview_decline">Decline</string>
    <string name="order_acceptview_status">Status</string>
    <string name="order_details_view_product">Product</string>
    <string name="order_details_view_price">Price</string>
    <string name="order_details_view_qnty">Quantity</string>
    <string name="popular_items_product">Product</string>
    <string name="popular_items_price">Price</string>
    <string name="product_view_product">Product</string>
    <string name="main2_drawer_home">Home</string>
    <string name="main2_drawer_profile">Profile</string>
    <string name="main2_drawer_cart">Your Cart</string>
    <string name="main2_drawer_order">Your Orders</string>
    <string name="main2_drawer_track">Track</string>
    <string name="main2_drawer_urproduct">Your Products</string>
    <string name="main2_drawer_accept">Accept Orders</string>
    <string name="main2_drawer_add">Add Product</string>
    <string name="main2_drawer_share">Share</string>
    <string name="main2_drawer_logout">Logout</string>
    <string name="main2_drawer_lang">Change Language</string>
</resources>