<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:visibility="visible"
        android:id="@+id/cr"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_margin="10dp"
                    android:layout_height="115dp"
                    android:id="@+id/pr_image"
                    android:src="@drawable/logo_new"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="35dp"
                        android:id="@+id/pr_name"
                        android:gravity="center"
                        android:text="@string/customer_status_product" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:id="@+id/pr_quant"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_status_qnty"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:id="@+id/pr_price"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_status_price"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:id="@+id/pr_date"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_status_time"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:id="@+id/orderid"
                        android:text="@string/customer_status_orderid"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:id="@+id/payid"
                        android:text="@string/customer_status_payment"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:id="@+id/btn_lyt"
                android:visibility="visible"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/map"
                    android:text="@string/customer_status_cancel"/>
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pay"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/customer_status_pay"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_status_pending"
                android:gravity="center"
                android:textSize="25dp"
                android:id="@+id/otp"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_status_pending"
                android:gravity="center"
                android:textSize="25dp"
                android:id="@+id/status"
                android:visibility="visible"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>