<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/product_select"></TextView>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Select Product"></TextView>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:id="@+id/prod_img"
                android:src="@drawable/upload"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/pname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"></EditText>

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:hint="@string/product_price"></EditText>

            <Spinner
                android:id="@+id/pricep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:hint="@string/product_quantity"></EditText>

            <EditText
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="Product Company"></EditText>
            <EditText
                android:id="@+id/mtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/product_milktype"></EditText>
            <EditText
                android:id="@+id/discp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/product_dis"></EditText>

            <Spinner
                android:id="@+id/moving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/textin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/product_property" />

                <AutoCompleteTextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textin"
                    android:hint="@string/product_dis2" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_publish"></Button>
            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/product_addmore" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>