<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relativeLayout">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:visibility="visible"
        android:id="@+id/cr"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_margin="10dp"
                    android:layout_height="120dp"
                    android:id="@+id/pr_image"
                    android:src="@drawable/logo_new"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Pickup"
                    android:background="@color/quantum_brown100"
                    android:id="@+id/ordtyp"
                    android:textSize="30dp"/></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="35dp"
                        android:id="@+id/pr_name"
                        android:gravity="center"
                        android:text="@string/order_acceptview_product" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/usrname"
                            android:text="@string/order_acceptview_name"
                            android:textSize="25dp"
                            />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:id="@+id/phone_number"
                        android:text="@string/order_acceptview_phone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:id="@+id/pr_quant"
                        android:layout_height="wrap_content"
                        android:text="@string/order_acceptview_qnty"
                        />

                    <TextView
                        android:id="@+id/pr_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/order_acceptview_price"
                        android:textSize="20dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textSize="10dp"
                        android:id="@+id/pr_date"
                        android:layout_height="wrap_content"
                        android:text="@string/order_acceptview_time"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/orderpid"
                        android:text="@string/order_acceptview_id"
                        android:textSize="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/payid"
                        android:text="@string/order_acceptview_payment"
                        android:textSize="20dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:id="@+id/btn_lytt"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="200dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/order_acceptview_accept"
                    android:id="@+id/accep"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rejext"
                    android:text="@string/order_acceptview_decline"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/otplyt">
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/otp_data"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="OTP"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ord_complete"
                android:text="Accept"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_acceptview_status"
                android:gravity="center"
                android:textSize="25dp"
                android:id="@+id/status"
                android:visibility="visible"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>